--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,6 @@
-@import "bootstrap/stylesheets/bootstrap";
+//@import "bootstrap/stylesheets/bootstrap";
 @import "compass/reset";
+@import "compass/utilities/sprites";
+@import "variables";
+@import "base";
+@import "main";
