footer in process

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -3,4 +3,13 @@
 }
 body{
 	font:13px/20px Arial, Verdana, sans-serif;
+	background:$bg-generel;
+}
+
+div img{
+	vertical-align:bottom;
+}
+
+a{
+	text-decoration:none;
 }
