--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,10 @@
 //@import "bootstrap/stylesheets/bootstrap";
 @import "compass/reset";
 @import "compass/utilities/sprites";
+@import "modules/mixins";
 @import "variables";
+@import "fonts";
+@import "layouts";
 @import "base";
 @import "main";
+@import "content";
