--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,6 +1,9 @@
 *{
 	box-sizing: border-box;
 }
+html,body{
+	height: 100%;
+}
 body{
 	font:13px/20px Arial, Verdana, sans-serif;
 	background:$bg-generel;
